--- a/estilo.css
+++ b/estilo.css
@@ -287,8 +287,8 @@ body {
 }
 input [type=”email”] {
             
-    width: 5 px;
-    height: 2px;
+    width: 5px;
+    height: 3.5px;
     opacity: 0;
     overflow: hidden;
 }
@@ -309,7 +309,8 @@ input [type=”email”] {
     margin-left:0;
 }
 
-
+.firma {
+    background-color:aquamarine;
 
 #conocimientos .icons {
     width: 200em;
@@ -1389,6 +1390,8 @@ input [type=”email”] {
             margin-left: 40%;
         }
         
+        .firma {
+            background-color:aquamarine;
     }
     
 
