--- a/estilo.css
+++ b/estilo.css
@@ -962,7 +962,7 @@ input [type=”email”] {
             height: 40px;
             background-color: #9c3e8f;
             margin-bottom: 0;
-            margin-left:0;
+            margin-left:20px;
         }
         
         
