--- a/estilo.css
+++ b/estilo.css
@@ -385,6 +385,68 @@ input [type=”email”] {
     display: flex;
    
 }
+#proyectos {
+    width:100%;
+    max-width:1200px;
+    height: 430px;
+   display:flex;
+     flex-direction: row;
+    gap:0.5rem;
+    justify-content: center;
+    margin:auto;
+}
+.container .card {
+    width:330px;
+    height: 430px;
+    border:2px solid black;
+    box-shadow:2px rgb(3, 44, 121);
+    margin:20px;
+    border-color:black;
+
+}
+.card {
+    width:330px;
+    height: 430px;
+    border:2px solid black;
+    box-shadow:cornflowerblue;
+    margin:40px;
+    border-color:black;
+}
+.card .imagen {
+    width: 100%;
+    
+}
+.card2 {
+    width:330px;
+    height: 430px;
+    border:2px solid black;
+    box-shadow:cornflowerblue;
+    margin:20px;
+    border-color:black;
+
+}
+/*ajustar tamaño imagen*/
+.card2 img {
+    width: 80%;
+}
+#proyectos .card3 {
+    width:330px;
+    height: 430px;
+    border:2px solid black;
+    box-shadow:cornflowerblue;
+    margin:10px;
+    border-color:black;
+
+}
+
+.card a :hover {
+    color:rgb(76, 55, 1);
+    
+}
+
+.card2 .photo {
+    width:80%;
+}
 
  .title02 {
     color:rgb(75, 56, 7);
@@ -433,7 +495,69 @@ input [type=”email”] {
         flex-direction: row;
        
     }
+    #proyectos {
+    width:100%;
+    max-width:1200px;
+    height: 430px;
+   display:flex;
+     flex-direction: row;
+    gap:0.5rem;
+    justify-content: center;
+    margin:auto;
+}
+.container .card {
+    width:330px;
+    height: 430px;
+    border:2px solid black;
+    box-shadow:2px rgb(3, 44, 121);
+    margin:20px;
+    border-color:black;
+
+}
+.card {
+    width:330px;
+    height: 430px;
+    border:2px solid black;
+    box-shadow:cornflowerblue;
+    margin:40px;
+    border-color:black;
+}
+.card .imagen {
+    width: 100%;
     
+}
+.card2 {
+    width:330px;
+    height: 430px;
+    border:2px solid black;
+    box-shadow:cornflowerblue;
+    margin:20px;
+    border-color:black;
+
+}
+/*ajustar tamaño imagen*/
+.card2 img {
+    width: 80%;
+}
+#proyectos .card3 {
+    width:330px;
+    height: 430px;
+    border:2px solid black;
+    box-shadow:cornflowerblue;
+    margin:10px;
+    border-color:black;
+
+}
+
+.card a :hover {
+    color:rgb(76, 55, 1);
+    
+}
+
+.card2 .photo {
+    width:80%;
+}
+
     
      .title02 {
         color:rgb(75, 56, 7);
@@ -660,90 +784,152 @@ input [type=”email”] {
             flex-direction: row;
            
         }
+        #proyectos {
+    width:100%;
+    max-width:1200px;
+    height: 430px;
+   display:flex;
+     flex-direction: row;
+    gap:0.5rem;
+    justify-content: center;
+    margin:auto;
+}
+.container .card {
+    width:330px;
+    height: 430px;
+    border:2px solid black;
+    box-shadow:2px rgb(3, 44, 121);
+    margin:20px;
+    border-color:black;
+
+}
+.card {
+    width:330px;
+    height: 430px;
+    border:2px solid black;
+    box-shadow:cornflowerblue;
+    margin:40px;
+    border-color:black;
+}
+.card .imagen {
+    width: 100%;
+    
+}
+.card2 {
+    width:330px;
+    height: 430px;
+    border:2px solid black;
+    box-shadow:cornflowerblue;
+    margin:20px;
+    border-color:black;
+
+}
+/*ajustar tamaño imagen*/
+.card2 img {
+    width: 80%;
+}
+#proyectos .card3 {
+    width:330px;
+    height: 430px;
+    border:2px solid black;
+    box-shadow:cornflowerblue;
+    margin:10px;
+    border-color:black;
+
+}
+
+.card a :hover {
+    color:rgb(76, 55, 1);
+    
+}
+
+.card2 .photo {
+    width:80%;
+}
         
-        
-         .title02 {
-            color:rgb(75, 56, 7);
-            font-style: oblique;
-            margin-left: 40%;
+.title02 {
+    color:rgb(75, 56, 7);
+    font-style: oblique;
+    margin-left: 40%;
            
-        }
+  }
     
      
-         #proyectos a :hover {
-            color:rgb(70, 52, 6);
+ #proyectos a :hover {
+    color:rgb(70, 52, 6);
         
       
-        .foot footer {
-            box-sizing:border-box;
-            height:40px;
-            background-color:violet;
-            border:2px solid #000000;
-            margin-bottom: 0;
-            margin-left:0;
+ .foot footer {
+    box-sizing:border-box;
+    height:40px;
+    background-color:violet;
+    border:2px solid #000000;
+    margin-bottom: 0;
+    margin-left:0;
         
-        }
-        .foot {
-            height: 40px;
-            background-color: #9c3e8f;
-            margin-bottom: 0;
-            margin-left:20px;
-        }
-        
-        
-        
-        #conocimientos .icons {
-            width: 200em;
-            font-size: x-large;
-            display: flex;
-            flex-direction: row;
-            margin-top: 40px;
-            fill: #000000;
-        
-        }
-        
-        #conocimientos .icons {
-            width: 50vh;
-            height: 50vh;
-        }
+}
+     
+.foot {
+    height: 40px;
+    background-color: #9c3e8f;
+    margin-bottom: 0;
+    margin-left:20px;
+   }
         
         
-        #quotation img {
-            width: 10vh;
-        }
         
-        #contacto {
-            display: flex;
-            flex-direction: column;
+#conocimientos .icons {
+    
+     width: 200em;
+     font-size: x-large;
+     display: flex;
+     flex-direction: row;
+     margin-top: 40px;
+      fill: #000000;
         
-        }
+ }
+       
+#conocimientos .icons {
+    
+width: 50vh;
+height: 50vh;
+ }
         
         
-        #contacto .message {
-            margin-top: 10%;
-            padding: 5px;
-        }
+#quotation img {
+    width: 10vh;
+     
+ }
         
-        .contacto_email img {
-            width:50px;
-            height: 50px;
+ #contacto {
+   display: flex;
+   flex-direction: column;
+ }
         
-        }
-        .foot {
-            width:100%;
-            height: 40px;
-            margin-bottom:0;
-            background-color: #960482;
-        }
-        .foot .icons {
-            margin-left: 40%;
-        }
+#contacto .message {
+  margin-top: 10%;
+  padding: 5px;
+ }
+     
+.contacto_email img {
+    width:50px;
+    height: 50px;
+  }
+     
+.foot {
+    width:100%;
+    height: 40px;
+    margin-bottom:0;
+    background-color: #960482;
+   }
+     
+  .foot .icons {
+      margin-left: 40%;
+   }
         
     }
 
-
-    
-    @media screen and (max-width:1280px)   {
+ @media screen and (max-width:1280px)   {
         .nav-bar {
             height:30%;
             margin-top: 0;
