--- a/estilo.css
+++ b/estilo.css
@@ -250,7 +250,6 @@ body {
     width:330px;
     height: 430px;
     border:2px solid black;
-    box-shadow:cornflowerblue;
     margin:10px;
     border-color:black;
 
@@ -292,7 +291,15 @@ input [type=”email”] {
     opacity: 0;
     overflow: hidden;
 }
-
+textarea {
+    {
+  background-color:aquamarine;
+  border-radius: 10px;
+  height: 20px;
+  width: 180px;
+  border: none;
+ 
+}
 .foot footer {
     box-sizing:border-box;
     height:40px;
